fixed static page, removed overflow

--- a/src/Tripinary/src/pages/slide-out/slideout.css
+++ b/src/Tripinary/src/pages/slide-out/slideout.css
@@ -1,8 +1,4 @@
-html, body {
- height:100%;
-  overflow: hidden;
 
-}
 
 .open-panel-btn {
   position: absolute;
@@ -27,7 +23,6 @@ html, body {
   background: white;
   transition: right 0.3s ease-in-out;
   box-shadow: -2px 0 8px rgba(0, 0, 0, 0.2);
-  overflow-y: auto;
   z-index: 999;
   display: flex;
 }
